# gmail-s3-archiver

./: .gitignore  README.md  app.py  gmail_to_s3.py  index_search.py  main.py  pyproject.toml  search_index.py  test_gmail_to_s3.py  upload.py
.github/workflows/: ci.yml
tests/: test_gmail_to_s3.py
